fixed top logo stretching when resizing tab

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ img {
     width: 90%;
     height: 90%;
     justify-self: center;
+    object-fit: cover;
 }   
 
 .central-img-div { 
@@ -120,8 +121,12 @@ img {
         
 .top-logo-div { 
     grid-area: 3 / 3 / 5 / 7; 
-    justify-self: center;
+    text-align: center;
     opacity: 0;
+}
+
+#top-logo {
+    height: 10vw;
 }
 
 .quote-div { 
@@ -129,6 +134,7 @@ img {
     display: flex;
     align-content: flex-end;
     padding-left: 30%;
+    font-size: 1vw;
 }
 
 
@@ -317,7 +323,12 @@ button {
     .top-logo-div { 
         grid-area: 2 / 2 / 3 / 4; 
         display: flex;
-        align-items: flex-end; 
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #top-logo {
+        height: auto;
     }
 
     .quote-div {   
